--- a/DjangoWeb/main/templates/main/index.html
+++ b/DjangoWeb/main/templates/main/index.html
@@ -20,6 +20,8 @@
 
         <section id="colors_section"></section>
     </div>
+    <div id="toast_container">
+    </div>
 </body>
 
 <script src="{% static 'main/index.js' %}"></script>
